Fix wrap's background color

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ a:hover {
 
 #wrap {
     clear: both;
+    background-color: #ffffff;
 }
 
 .content {
